init User Service
